<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.avadh.houseratings.houseratings.app.AddHouseActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editHouseName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:editable="true"
        android:hint="@string/add_house_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editHouseAddr"
        android:layout_below="@+id/editHouseName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:hint="@string/add_house_addr" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editHousePrice"
        android:layout_below="@+id/editHouseAddr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_house_price"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:id="@+id/editHouseInfo"
        android:layout_below="@+id/editHousePrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/add_house_info"
        android:longClickable="false"
        android:inputType="textMultiLine"
        android:gravity="top" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/editHouseSave"
        android:layout_below="@+id/editHouseInfo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveNewHouse" />

</RelativeLayout>
